# cocos

./: .gitignore  Cargo.toml  LICENSE_MIT  readme.md
.github/workflows/: rust.yml
bench/: Cargo.toml
bench/benches/: stability.rs
bench/scripts/: installconsel.ps1  variance.ps1
bench/scripts/modconsel/: modconsel.psm1
bench/src/: lib.rs
cocos/: Cargo.toml
cocos-parse/: Cargo.toml
cocos-parse/src/: lib.rs
cocos/src/: main.rs  output.rs
cocos/src/parse/: mod.rs
libcocos/: Cargo.toml
libcocos/src/: au.rs  bootstrap.rs  lib.rs
libcocos/src/au/: error.rs  math.rs  mod.rs  newton.rs  rss.rs  wls.rs
libcocos/src/vectors/: mod.rs  scalar.rs  simd.rs
