[package]
name = "libcocos"
version = "0.1.0"
edition = "2024"

[dependencies]
# bootstrapping
rand = "0.9.2"

# statistics
argmin = "0.10.0"
argmin-math = "0.4.0"
statrs = "0.18.0"

# parallelization
rayon = { version = "1.11.0", optional = true }

# serialization
serde = { version = "1.0.221", optional = true, features = ["derive"] }

[features]
simd = []